fixed navigation on smaller screens

--- a/Sass/content/_blocks.scss
+++ b/Sass/content/_blocks.scss
@@ -17,7 +17,6 @@
 }
 
 #welkom{
-	min-height: 70vh;
 	position: relative;
 }
 
