--- a/Sass/index.css
+++ b/Sass/index.css
@@ -43,7 +43,6 @@ p, span {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 30vh;
 }
 
 .navigation .nav-logo {
@@ -187,7 +186,6 @@ p, span {
 }
 
 #welkom {
-  min-height: 70vh;
   position: relative;
 }
 
